[workspace]
members = ["helios-dac-sys"]

[package]
name = "helios-dac"
description = "library to interact with the [Helios Laser DAC](https://bitlasers.com/helios-laser-dac/)"
version = "0.2.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/maxjoehnk/helios-dac-rs"

[features]
default = ["sdk"]

sdk = ["helios-dac-sys"]
native = ["rusb", "thiserror"]

[dependencies]
bitflags = "2.5"
rusb = { version = "0.9", optional = true }
thiserror = { version = "1", optional = true }

[dependencies.helios-dac-sys]
path = "helios-dac-sys"
version = "0.2.0"
optional = true
