[package]
name = "helios-dac-sys"
description = "generated bindings for the helios dac sdk"
version = "0.2.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/maxjoehnk/helios-dac-rs"

[dependencies]

[build-dependencies]
cc = "1"
bindgen = "0.69"
pkg-config = "0.3"
